; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_main.c_t4_read_port_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_main.c_t4_read_port_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { %struct.port_info** }
%struct.port_info = type { i32* }

@MAX_NPORTS = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32**)* @t4_read_port_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @t4_read_port_device(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca %struct.adapter*, align 8
  %9 = alloca %struct.port_info*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32** %2, i32*** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call %struct.adapter* @device_get_softc(i32* %10)
  store %struct.adapter* %11, %struct.adapter** %8, align 8
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @MAX_NPORTS, align 4
  %17 = icmp sge i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14, %3
  %19 = load i32, i32* @EINVAL, align 4
  store i32 %19, i32* %4, align 4
  br label %42

20:                                               ; preds = %14
  %21 = load %struct.adapter*, %struct.adapter** %8, align 8
  %22 = getelementptr inbounds %struct.adapter, %struct.adapter* %21, i32 0, i32 0
  %23 = load %struct.port_info**, %struct.port_info*** %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.port_info*, %struct.port_info** %23, i64 %25
  %27 = load %struct.port_info*, %struct.port_info** %26, align 8
  store %struct.port_info* %27, %struct.port_info** %9, align 8
  %28 = load %struct.port_info*, %struct.port_info** %9, align 8
  %29 = icmp eq %struct.port_info* %28, null
  br i1 %29, label %35, label %30

30:                                               ; preds = %20
  %31 = load %struct.port_info*, %struct.port_info** %9, align 8
  %32 = getelementptr inbounds %struct.port_info, %struct.port_info* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = icmp eq i32* %33, null
  br i1 %34, label %35, label %37

35:                                               ; preds = %30, %20
  %36 = load i32, i32* @ENXIO, align 4
  store i32 %36, i32* %4, align 4
  br label %42

37:                                               ; preds = %30
  %38 = load %struct.port_info*, %struct.port_info** %9, align 8
  %39 = getelementptr inbounds %struct.port_info, %struct.port_info* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i32**, i32*** %7, align 8
  store i32* %40, i32** %41, align 8
  store i32 0, i32* %4, align 4
  br label %42

42:                                               ; preds = %37, %35, %18
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local %struct.adapter* @device_get_softc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
